fixed alignment of posts and edit component, added basefunction for edit component

--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -87,8 +87,8 @@
     margin: 0 8px 16px;
     padding: 16px;
     display: flex;  
-    flex-direction: row;
-    justify-content: left;
+    flex-direction: column;
+    justify-content: space-between;
     align-items: left;
     transition: all 0.2s ease-in-out;
     line-height: 24px;
